--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,29 @@
-paper/data filter=lfs diff=lfs merge=lfs -text
 paper/results filter=lfs diff=lfs merge=lfs -text
 paper/software/ngs-bits_2016.08.04.zip filter=lfs diff=lfs merge=lfs -text
 paper/software/skewer_2016.08.04.zip filter=lfs diff=lfs merge=lfs -text
 paper/software/art_illumina_src151-adapter-enabled.tar.gz filter=lfs diff=lfs merge=lfs -text
 paper/software/art_illumina_src151.tar.gz filter=lfs diff=lfs merge=lfs -text
+paper/data filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles filter=lfs diff=lfs merge=lfs -text
+paper/data/real filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R1_001.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R1_005.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R1_01.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R2_001.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R2_005.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/art_profiles/HiSeq2500L125R2_01.txt filter=lfs diff=lfs merge=lfs -text
+paper/data/real/NA12878_03_AACGTGAT_L001_R1_001.fastq.gz filter=lfs diff=lfs merge=lfs -text
+paper/data/real/NA12878_03_AACGTGAT_L001_R2_001.fastq.gz filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_001.1.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_001.1.fq filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_001.2.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_001.2.fq filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_005.1.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_005.1.fq filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_005.2.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_005.2.fq filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_01.1.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_01.1.fq filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_01.2.aln filter=lfs diff=lfs merge=lfs -text
+paper/data/simulated/sim_01.2.fq filter=lfs diff=lfs merge=lfs -text
