add bit array dependency for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
 install:
   - pip install --upgrade pip wheel
   - pip install Cython
+  - pip install bitarray
   - pip install .
 
 script:
