update benchmarking scripts

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ paper/software/doc
 paper/scripts/atropos
 paper/scripts/skewer
 paper/scripts/seqpurge
-paper/scripts/result
+paper/scripts/results
