update benchmark scripts

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ paper/scripts/skewer
 paper/scripts/seqpurge
 paper/scripts/results*
 paper/scripts/commands*
+paper/scripts/bwameth_commands*
 paper/scripts/summarize_commands
 paper/scripts/real*
 paper/data/real/
