Migrate to versioneer

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
 description-file = README
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = atropos/_version.py
+versionfile_build = atropos/_version.py
+tag_prefix =
+parentdir_prefix = atropos-
