--- a/.gitattributes
+++ b/.gitattributes
@@ -27,3 +27,4 @@ paper/data/simulated/sim_01.1.aln filter=lfs diff=lfs merge=lfs -text
 paper/data/simulated/sim_01.1.fq filter=lfs diff=lfs merge=lfs -text
 paper/data/simulated/sim_01.2.aln filter=lfs diff=lfs merge=lfs -text
 paper/data/simulated/sim_01.2.fq filter=lfs diff=lfs merge=lfs -text
+atropos/_version.py export-subst
