again try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ python:
 install:
   - pip install --upgrade pip wheel
   - pip install Cython
-  - pip install pytest
   - pip install .
 
-script:
-  - pytest
+script: pytest
