--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ cache:
   directories:
     - $HOME/.cache/pip
 python:
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-
+  - 3.3
+  - 3.4
+  - 3.5
+  - 3.6
 install:
   - pip install --upgrade pip wheel
+  - pip install tox-travis
   - pip install Cython
-
-script: make
+script:
+  - tox
