done with tox; move back to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
   - 3.6
 install:
   - pip install --upgrade pip wheel
-  - pip install tox-travis
+  - pip install Cython
+  - make install
 script:
-  - tox
+  - make test
