Move adapters file to package data; provide basic output for qc command; begin implementing (optional) mako templates for reports

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include README.rst
 include CHANGES.md
 include CITATION
 include LICENSE.txt
+include adapters/*
 include doc/*.rst
 include doc/conf.py
 include doc/Makefile
@@ -11,6 +12,7 @@ include atropos/_align.c
 include atropos/_qualtrim.c
 include atropos/_seqio.c
 include bin/_preamble.py
+include templates/*
 include tests/test*.py
 include tests/utils.py
 graft tests/data
