--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,13 +6,12 @@ include LICENSE.txt
 include doc/*.rst
 include doc/conf.py
 include doc/Makefile
-include atropos/*.pyx
-include atropos/_align.c
-include atropos/_qualtrim.c
-include atropos/_seqio.c
-include atropos/report/*
-include atropos/adapters/*
-include atropos/templates/*
+include atropos/**/*.pyx
+include atropos/align/_align.c
+include atropos/trim/_qualtrim.c
+include atropos/io/_seqio.c
+include atropos/adapters/*.fa
+include atropos/report/templates/*
 include bin/_preamble.py
 include tests/test*.py
 include tests/utils.py
