Docker images and CWL tool definitions created for all four tools

--- a/paper/workflow/tools/skewer/Dockerfile
+++ b/paper/workflow/tools/skewer/Dockerfile
@@ -10,12 +10,12 @@
 FROM alpine
 
 # GCC
-RUN apk add --no-cache g++
+RUN apk add --no-cache g++ make git
 
 # Clone ngs-bits
 RUN git clone --recursive https://github.com/relipmoc/skewer && \
     cd skewer && \
     make 
 
-ENTRYPOINT ["/skewer/bin/skewer"]
+ENTRYPOINT ["/skewer/skewer"]
 CMD ["--help"]
