Dockerize remaining tools

--- a/paper/workflow/tools/adapter-removal/Dockerfile
+++ b/paper/workflow/tools/adapter-removal/Dockerfile
@@ -1,18 +1,21 @@
-# Here's how to build and deploy.
+#################################################################
+# Dockerfile
+#
+# Software:         AdapterRemoval
+# Software Version: 2.2.0
+# Description:      AdapterRemoval2 image
+# Website:          https://github.com/MikkelSchubert/adapterremoval
+# Provides:         AdapterRemoval
+# Base Image:       alpine
+# Build Cmd:        docker build -f Dockerfile -t mikkelschubert/adapterremoval:latest .
+#                   docker tag mikkelschubert/adapterremoval:latest jdidion/adapterremoval
+# Pull Cmd:         docker pull jdidion/adapterremoval
+# Run Cmd:          docker run
 # Note: for me to be able to deploy this, it has to be tagged with my repo
 # name. I'm not trying to take credit for anyone's work :)
-# 1. docker build -f Dockerfile -t mikkelschubert/adapterremoval:latest .
-# 2. docker tag mikkelschubert/adapterremoval:latest jdidion/adapterremoval
-# 3. docker login -e <email> -u <user> -p <password>
-# 4. docker push jdidion/adapterremoval
-
-# Base Alpine
+#################################################################
 FROM alpine
-
-# GCC
 RUN apk add --no-cache g++ git make zlib-dev bzip2-dev perl
-
-# Clone ngs-bits
 RUN git clone --recursive https://github.com/MikkelSchubert/adapterremoval && \
     cd adapterremoval && \
     make 
