--- a/paper/workflow/tools/skewer/Dockerfile
+++ b/paper/workflow/tools/skewer/Dockerfile
@@ -1,18 +1,21 @@
-# Here's how to build and deploy.
+#################################################################
+# Dockerfile
+#
+# Software:         skewer
+# Software Version: latest
+# Description:      skewer image
+# Website:          https://github.com/relipmoc/skewer
+# Provides:         skewer
+# Base Image:       alpine
+# Build Cmd:        docker build -f Dockerfile -t relipmoc/skewer:latest .
+#                   docker tag relipmoc/skewer:latest jdidion/seqpurge
+# Pull Cmd:         docker pull jdidion/skewer
+# Run Cmd:          docker run
 # Note: for me to be able to deploy this, it has to be tagged with my repo
 # name. I'm not trying to take credit for anyone's work :)
-# 1. docker build -f Dockerfile -t replimoc/skewer:latest .
-# 2. docker tag replimoc/skewer:latest jdidion/skewer
-# 3. docker login -e <email> -u <user> -p <password>
-# 4. docker push jdidion/skewer
-
-# Base Alpine
+#################################################################
 FROM alpine
-
-# GCC
 RUN apk add --no-cache g++ make git
-
-# Clone ngs-bits
 RUN git clone --recursive https://github.com/relipmoc/skewer && \
     cd skewer && \
     make 
