--- a/paper/workflow/tools/bwa/base/Dockerfile
+++ b/paper/workflow/tools/bwa/base/Dockerfile
@@ -6,7 +6,7 @@
 # Description:      Alpine bwa and bwa-meth Image
 # Website:          https://github.com/lh3/bwa
 #                   https://github.com/brentp/bwa-meth
-# Provides:         bwa, bwa-meth.py
+# Provides:         bwa|bwa-meth.py
 # Base Image:       alpine:python
 # Build Cmd:        docker build -t jdidion/bwabase:latest .
 # Pull Cmd:         docker pull jdidion/bwabase
@@ -15,15 +15,16 @@
 #################################################################
 # python3 Alpine image with gcc
 FROM python:alpine
-ENV DEBIAN_FRONTEND noninteractive
 WORKDIR /tmp
+
+RUN apk add --update ca-certificates openssl && update-ca-certificates
+RUN apk add g++ make git zlib-dev
 
 ### Install bwa
 ENV VERSION 0.7.15
-ENV NAME bwa
-ENV URL "https://github.com/lh3/bwa/archive/${VERSION}.tar.gz"
-RUN wget -q -O - $URL | tar -zxv && \
-    cd ${NAME}-${VERSION} && \
+ENV URL "https://github.com/lh3/bwa/releases/download/v${VERSION}/bwa-${VERSION}.tar.bz2"
+RUN wget -q -O - $URL | tar -jxv && \
+    cd bwa-${VERSION} && \
     make -j 4 && \
     cd .. && \
     cp ./${NAME}-${VERSION}/${NAME} /usr/local/bin/ && \
@@ -33,12 +34,14 @@ RUN wget -q -O - $URL | tar -zxv && \
 # Install bwa-meth
 RUN git clone --recursive https://github.com/brentp/bwa-meth && \
     cd bwa-meth && \
-    python setup.py install
+    python setup.py install && \
+    rm -Rf /tmp/bwa-met
 
 # Install samtools
 ENV VERSION 1.4
 ENV URL "https://github.com/samtools/samtools/releases/download/1.4/samtools-${VERSION}.tar.bz2"
 RUN wget -q -O - $URL | tar -zxv && \
-    cd samtools-${VERSION} &&
-    make &&
-    make --prefix=/usr/local/bin/ install
+    cd samtools-${VERSION} && \
+    make && \
+    make --prefix=/usr/local/bin/ install && \
+    rm -Rf /tmp/samtools-${VERSION}
