--- a/paper/workflow/tools/star/base/Dockerfile
+++ b/paper/workflow/tools/star/base/Dockerfile
@@ -15,17 +15,17 @@ FROM alpine
 WORKDIR /tmp
 
 # GCC
-RUN apk add --no-cache g++ make git
+RUN apk add --no-cache g++ make git zlib-dev
+RUN apk add --update ca-certificates openssl && update-ca-certificates
 
 # STAR
 ENV VERSION 2.5.3a
-ENV NAME STAR
 ENV URL "https://github.com/alexdobin/STAR/archive/${VERSION}.tar.gz"
 RUN wget -q -O - $URL | tar -zxv && \
-    cd ${NAME}-${VERSION}/source && \
+    cd STAR-${VERSION}/source && \
     make -j 4 && \
     cd .. && \
-    cp ./bin/Linux_x86_64_static/STAR /usr/local/bin/ && \
-    cd .. && \
-    strip /usr/local/bin/${NAME}; true && \
-    rm -rf ./${NAME}-${VERSION}/
+    cp ./bin/Linux_x86_64_static/STAR /usr/local/bin/
+
+RUN rm -rf /var/cache/apk/* /tmp/* && \
+    apk del deps
