updates to Docker images

--- a/paper/workflow/tools/adapter-removal/Dockerfile
+++ b/paper/workflow/tools/adapter-removal/Dockerfile
@@ -22,6 +22,7 @@ RUN git clone --recursive https://github.com/MikkelSchubert/adapterremoval && \
     make && \
     mv /tmp/adapterremoval/build/AdapterRemoval /usr/local/bin && \
     rm -Rf /tmp/adapterremoval
-
+RUN rm -rf /var/cache/apk/* /tmp/* && \
+    apk del deps
 ENTRYPOINT ["/usr/local/bin/AdapterRemoval"]
 CMD ["--help"]
