--- a/paper/workflow/tools/bwa/index/Dockerfile
+++ b/paper/workflow/tools/bwa/index/Dockerfile
@@ -35,5 +35,9 @@ RUN wget -O hg38.fa.gz 'http://hgdownload.cse.ucsc.edu/goldenPath/hg38/bigZips/h
 RUN bwa index /genomes/hg37.fa
 RUN bwa index /genomes/hg38.fa
 
+# Build bwa-meth indexes
+RUN bwameth.py index /genomes/hg37.fa
+RUN bwameth.py index /genomes/hg38.fa
+
 RUN rm -rf /var/cache/apk/* /tmp/* && \
     apk del deps
