updates to docker images

--- a/paper/workflow/tools/star/index/Dockerfile
+++ b/paper/workflow/tools/star/index/Dockerfile
@@ -36,7 +36,10 @@ RUN wget --no-parent --no-directories -O /annotations/${FILE} ${URL} && \
     gunzip /annotations/${FILE}
 
 ## build index
-RUN STAR --runMode genomeGenerate --runThreadN ${THREADS} --genomeDir /genomes --genomeFastaFiles /genomes/hg37.fa --sjdbGTFfile /annotations/gencode.v${GENCODE_VERSION}lift37.annotation.gtf.gz --sjdbOverhang 75
+RUN STAR --runMode genomeGenerate --runThreadN ${THREADS} \
+        --genomeDir /genomes --genomeFastaFiles /genomes/hg37.fa \
+        --sjdbGTFfile /annotations/gencode.v${GENCODE_VERSION}lift37.annotation.gtf \
+        --sjdbOverhang 75
 
 # hg38
 
@@ -53,7 +56,10 @@ RUN wget --no-parent --no-directories -O /annotations/${FILE} ${URL} && \
     gunzip /annotations/${FILE}
 
 # Build star index
-RUN STAR --runMode genomeGenerate --genomeDir /genomes --genomeFastaFiles /genomes/hg38.fa --sjdbGTFfile /annotations/gencode.v${GENCODE_VERSION}.annotation.gtf.gz
+RUN STAR --runMode genomeGenerate --runThreadN ${THREADS} \
+        --genomeDir /genomes --genomeFastaFiles /genomes/hg38.fa \
+        --sjdbGTFfile /annotations/gencode.v${GENCODE_VERSION}.annotation.gtf \
+        --sjdbOverhang 75
 
 RUN apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) && \
     rm -rf /var/lib/apt/lists/* && \
