--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ include doc/conf.py
 include doc/Makefile
 include atropos/**/*.pyx
 include atropos/align/_align.c
-include atropos/trim/_qualtrim.c
+include atropos/commands/trim/_qualtrim.c
 include atropos/io/_seqio.c
 include atropos/adapters/*.fa
 include atropos/report/templates/*
