--- a/paper/workflow/tools/atropos-paper/Dockerfile
+++ b/paper/workflow/tools/atropos-paper/Dockerfile
@@ -6,7 +6,7 @@
 # Description:      Alpine image with tools to support the Atropos paper workflow
 # Website:          https://bedops.readthedocs.io/en/latest/
 #                   https://github.com/ncbi/sra-tools
-# Provides:         bedops|fastq-dump
+# Provides:         bedops|/opt/fastq-dump/fastq-dump-wrapper.sh
 # Base Image:       alpine
 # Build Cmd:        docker build -t jdidion/atropos_paper:latest .
 # Pull Cmd:         docker pull jdidion/atropos_paper
@@ -18,6 +18,7 @@ RUN mkdir /annotations
 
 RUN apt-get update && apt-get -y upgrade
 RUN apt-get install -y libc6-dev build-essential tcsh devscripts debhelper git wget
+RUN apt-get install ca-certificates openssl && update-ca-certificates
 RUN apt-get clean
 
 ENV GENCODE_VERSION '26'
@@ -39,9 +40,16 @@ RUN wget -q -O - $URL | tar -zxv && \
 
 # sra-tools
 ENV VERSION 2.8.2-1
-RUN wget "http://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/${VERSION}/sratoolkit.${VERSION}-ubuntu64.tar.gz" && \
-    tar zxfv sratoolkit.${VERSION}-ubuntu64.tar.gz && \
-    cp -r sratoolkit.${VERSION}-ubuntu64/bin/* /usr/local/bin
+ENV URL "https://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/${VERSION}/sratoolkit.${VERSION}-ubuntu64.tar.gz"
+RUN wget 
+RUN tar -xvf sratoolkit.2.8.2-1-ubuntu64.tar.gz
+RUN rm sratoolkit.2.8.2-1-ubuntu64.tar.gz
+RUN mkdir /opt/fastq-dump/
+RUN sudo mv sratoolkit.2.8.2-1-ubuntu64 /opt/fastq-dump/
+
+ADD fastq-dump-wrapper.sh /opt/fastq-dump/
+RUN mkdir /data
+WORKDIR /data
 
 RUN apt-get remove --purge -y $BUILD_PACKAGES $(apt-mark showauto) && \
     rm -rf /var/lib/apt/lists/* && \
