--- a/paper/workflow/data/hg37/bwa-index/Dockerfile
+++ b/paper/workflow/data/hg37/bwa-index/Dockerfile
@@ -1,19 +1,16 @@
 #################################################################
 # Dockerfile
 #
-# Software:         bwa and bwa-meth, plus genome indexes
-# Software Version: 0.7.15|0.10
-# Description:      Alpine bwa and bwa-meth Image with genome indexes
+# Software:         bwa plus genome indexes
+# Software Version: 0.7.15
+# Description:      Alpine bwa image with genome indexes
 # Website:          https://github.com/lh3/bwa
-#                   https://github.com/brentp/bwa-meth
-# Provides:         bwa|bwa-meth.py
+# Provides:         bwa|/data/index/bwa/hg37
 # Base Image:       alpine:python
 # Build Cmd:        docker build -t jdidion/bwaindex:latest .
 # Pull Cmd:         docker pull jdidion/bwaindex
 # Run Cmd:          docker run --rm jdidion/bwaindex bwa
-#                   docker run --rm jdidion/bwaindex python bwa-meth.py
 #################################################################
 # Using jdidion/bwabase as the base image
 FROM jdidion/bwabase
 ADD bwa-index/* /data/index/bwa/hg37/
-ADD bwameth-index/* /data/index/bwameth/hg37
