--- a/paper/workflow/data/hg37/bwa-index/Dockerfile
+++ b/paper/workflow/data/hg37/bwa-index/Dockerfile
@@ -1,7 +1,7 @@
 #################################################################
 # Dockerfile
 #
-# Software:         bwa plus genome indexes
+# Software:         bwa plus hg37 genome indexes
 # Software Version: 0.7.15
 # Description:      Alpine bwa image with genome indexes
 # Website:          https://github.com/lh3/bwa
@@ -13,4 +13,4 @@
 #################################################################
 # Using jdidion/bwabase as the base image
 FROM jdidion/bwabase
-ADD bwa-index/* /data/index/bwa/hg37/
+ADD hg37.fa* /data/index/bwa/hg37/
