fix star builds

--- a/paper/workflow/data/hg37/star-index/Dockerfile
+++ b/paper/workflow/data/hg37/star-index/Dockerfile
@@ -12,5 +12,5 @@
 # Run Cmd:          docker run --rm jdidion/starbase STAR
 #################################################################
 # Using jdidion/bwabase as the base image
-FROM jdidion/bwa
-ADD star-index/* /data/index/star/hg37/
+FROM jdidion/starbase
+ADD index/* /data/index/star/hg37/
